--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div id="gameBoardContainer">
         <h1>Tic-Tac-Toe</h1>
-            <div class="gameBoard" id="board">
-                <div class="box" id="0">X</div>
-                <div class="box" id="1">O</div>
-                <div class="box" id="2"></div>
-                <div class="box" id="3"></div>
-                <div class="box" id="4"></div>
-                <div class="box" id="5"></div>
-                <div class="box" id="6"></div>
-                <div class="box" id="7"></div>
-                <div class="box" id="8"></div>
+            <div id="gameBoard">
+                <div boxIndex="0" class="box">X</div>
+                <div boxIndex="1" class="box"></div>
+                <div boxIndex="2" class="box"></div>
+                <div boxIndex="3" class="box"></div>
+                <div boxIndex="4" class="box"></div>
+                <div boxIndex="5" class="box"></div>
+                <div boxIndex="6" class="box"></div>
+                <div boxIndex="7" class="box"></div>
+                <div boxIndex="8" class="box"></div>
             </div>
     </div>
     <div class="bottomLine">
         <div class="displayMessage" id="displayMessage"></div>    
         <button class="resetButton" id="resetButton">Reset</button>
     </div>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
