--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <div id="gameBoardContainer">
         <h1>Tic-Tac-Toe</h1>
             <div id="gameBoard">
-                <div boxIndex="0" class="box">X</div>
-                <div boxIndex="1" class="box"></div>
-                <div boxIndex="2" class="box"></div>
-                <div boxIndex="3" class="box"></div>
-                <div boxIndex="4" class="box"></div>
-                <div boxIndex="5" class="box"></div>
-                <div boxIndex="6" class="box"></div>
-                <div boxIndex="7" class="box"></div>
-                <div boxIndex="8" class="box"></div>
+                <div id="0" class="box"></div>
+                <div id="1" class="box"></div>
+                <div id="2" class="box"></div>
+                <div id="3" class="box"></div>
+                <div id="4" class="box"></div>
+                <div id="5" class="box"></div>
+                <div id="6" class="box"></div>
+                <div id="7" class="box"></div>
+                <div id="8" class="box"></div>
             </div>
     </div>
     <div class="bottomLine">
