more js stuff done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <div id="gameBoardContainer">
+        <span>
+            <input type="text" id="playerO" placeholder="Player O">
+            <button type="button" id="player1submit">Submit</button>
+        </span>
+        <span class="player2">
+            <input type="text" id="playerX" placeholder="Player X">
+            <button type="button" id="player2submit" >Submit</button>
+        </span>
         <h1>Tic-Tac-Toe</h1>
+        
             <div id="gameBoard">
                 <div id="0" class="box"></div>
                 <div id="1" class="box"></div>
