added player name section and changed css

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <div id="gameBoardContainer">
         <span>
             <input type="text" id="playerO" placeholder="Player O">
-            <button type="button" id="player1submit">Submit</button>
+            <button type="button" id="playerOsubmit">Submit</button>
         </span>
         <span class="player2">
             <input type="text" id="playerX" placeholder="Player X">
-            <button type="button" id="player2submit" >Submit</button>
+            <button type="button" id="playerXsubmit">Submit</button>
         </span>
-        <h1>Tic-Tac-Toe</h1>
-        
+        <h1>Thuan's Tic-Tac-Toe</h1>
+        <div id="playerOname" class="pO"></div>
+        <div id="playerXname" class="pX"></div>
             <div id="gameBoard">
                 <div id="0" class="box"></div>
                 <div id="1" class="box"></div>
