--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="text" id="playerX" placeholder="Player X">
             <button type="button" id="playerXsubmit">Submit</button>
         </span>
-        <h1>Thuan's Tic-Tac-Toe</h1>
+        <h1>Thuan's Tic-Tac-Toe Game</h1>
         <div id="playerOname" class="pO"></div>
         <div id="playerXname" class="pX"></div>
             <div id="gameBoard">
